# data-analysis-agent

./: .env.example  .gitignore  README.md  REVIEW.md  agent.py  app.py  pyproject.toml  requirements.txt  run.py  数据分析Agent-审查与优化文档.md
data/samples/: sample_sales.csv
demos/: 01-data-loading.md  02-data-cleaning.md  03-statistical-analysis.md  04-data-visualization.md  05-report-generation.md
demos/charts-after/: BEHAVIOR.md  分析报告.md
demos/charts-before/: BEHAVIOR.md
deploy/: Dockerfile  LICENSE  docker-compose.yml
skills/: SKILL.md  data-cleaning.md  data-loading.md  data-visualization.md  report-generation.md  statistical-analysis.md
tests/: test_agent.py  test_cleaner.py  test_highlights.py  test_loader.py  test_routing.py  test_statistician.py
tests/fixtures/: gbk_sample.csv  sample.csv
tools/: __init__.py  cleaner.py  exporter.py  loader.py  quality.py  reporter.py  statistician.py  visualizer.py
